@@ -1,5 +1,5 @@
 /*
- * $Id: misc.h,v 1.23 2007/01/17 05:34:17 sfeam Exp $
+ * $Id: misc.h,v 1.24 2007/10/21 04:17:22 sfeam Exp $
  */
 
 /* GNUPLOT - misc.h */
@@ -67,7 +67,7 @@ enum PLOT_STYLE get_style __PROTO((void));
 void get_filledcurves_style_options __PROTO((filledcurves_opts *));
 void filledcurves_options_tofile __PROTO((filledcurves_opts *, FILE *));
 void lp_parse __PROTO((struct lp_style_type *, TBOOLEAN, TBOOLEAN));
-void lp_use_properties __PROTO((struct lp_style_type *lp, int tag, int pointflag));
+void lp_use_properties __PROTO((struct lp_style_type *lp, int tag));
 void arrow_parse __PROTO((struct arrow_style_type *, TBOOLEAN));
 
 void parse_fillstyle __PROTO((struct fill_style_type *fs, int def_style,
